# rust-mvc-todo

./: Cargo.toml
src/: controllers.rs  main.rs  models.rs  views.rs
static/: style.css
templates/: index.html  layout.html  todo_detail.html  todo_form.html
